--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,13 +15,16 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:protectionLevel="signature|system|development"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.LockBoxVIew"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
         <activity
-            android:name=".BannerScreen"
+            android:name=".broadcast.SendActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +33,18 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".broadcast.ReceivedActivity" />
+
+        <receiver
+            android:name=".broadcast.MyBroadcast"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="test.sending" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".service.TestService" />
     </application>
+
 
 </manifest>
